--- a/source/_includes/post/date.html
+++ b/source/_includes/post/date.html
@@ -7,7 +7,9 @@
 {% capture was_updated %}{{ updated | size }}{% endcapture %}
 
 {% if has_date != '0' %}
-  {% capture time %}<time datetime="{{ date | datetime | date_to_xmlschema }}" pubdate{% if updated %} data-updated="true"{% endif %}>{{ date_formatted }}</time>{% endcapture %}
+  <!-- {% capture time %}<time datetime="{{ date | datetime | date_to_xmlschema }}" pubdate{% if updated %} data-updated="true"{% endif %}>{{ date_formatted }}</time>{% endcapture %} -->
+  {{ post.date_time_html }}
+  {{ page.date_time_html }}
 {% endif %}
 
 {% if was_updated != '0' %}
