--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,27 +1,3 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
-<link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-<!--- MathJax Configuration -->
-<script type="text/javascript"
-src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML,http://drz.ac/javascripts/MathJaxLocal.js">
-</script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-    jax: ["input/TeX","output/HTML-CSS"],
-    extensions: ["tex2jax.js","MathMenu.js","MathZoom.js"],
-    tex2jax:
-        {
-            inlineMath: [ ['$','$'], ['\\(','\\)'] ],
-            displayMath: [ ['$$','$$'], ['\\[','\\]'] ],
-            skipTags: ["script","noscript","style","textarea","pre","code"],
-            processEscapes: true
-        },
-    TeX:
-        {
-            equationNumbers: { autoNumber: "AMS" },
-            TagSide: "left",
-
-        },
-    "HTML-CSS": { availableFonts: ["TeX"] }
-    });
-</script>
+<link href="http://fonts.googleapis.com/css?family=EB+Garamond:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=EB+Garamond:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
